# json_rivulet

./: .clang-format  .clang-tidy  .gitignore  meson.build
include/: bit_stack.h  json_stream.h
src/: bit_stack.c  bit_stack2.c  json_stream.c
tests/: json_test_buffered.c  json_test_core.c  json_test_files.c  json_tests.c  json_tests.h  json_util_compare.c  json_util_file.c  meson.build
tests/json_files/: 400B.json  400KB.json  40KB.json  4KB.json  basic_json.json  basic_json_with_large_num.json  broad_tree.json  deep_tree.json  full_json_schema.json  full_json_schema_2.json  hello_world.json  lots_of_numbers.json  lots_of_strings.json  project_lock.json  special_num_format.json
